edit tracking.html to take argument from routes.py

--- a/WebServer/app/static/style.css
+++ b/WebServer/app/static/style.css
@@ -40,7 +40,7 @@
     margin: 0.1em;
     height: 15px;
     width: 15px;
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
     border-radius: 50%;
 }
 
