--- a/WebServer/app/templates/tracking.html
+++ b/WebServer/app/templates/tracking.html
@@ -17,27 +17,33 @@
     <div class="content">
         <div class="upper-wrap">
             <div class="devices">
-                <!-- TODO: func: python - device-status -->
                 <!-- TODO: func: js - device-status-shape change color -->
                 <div class="device">
-                    <div class="device-status-shape"></div>
+                    {% if sensor == "up" %}
+                        <div class="device-status-shape" style="background-color: yellowgreen;"></div>
+                    {% else %}
+                        <div class="device-status-shape" style="background-color: red;"></div>
+                    {% endif %}
                     <p class="device-name">Sensor</p>
                 </div>
                 <div class="device">
-                    <div class="device-status-shape"></div>
+                    {% if gps == "up" %}
+                        <div class="device-status-shape" style="background-color: yellowgreen;"></div>
+                    {% else %}
+                        <div class="device-status-shape" style="background-color: red;"></div>
+                    {% endif %}
                     <p class="device-name">GPS</p>
                 </div>
             </div>
             
             <div class="ABpoint">
-                <!-- TODO: func: get A, B coordinate -->
-                <p class="point-coordinate">A: -40.678901, 163.8765432 </p>
-                <p class="point-coordinate">B: -40.678901, 163.8765432</p>
+                
+                <p class="point-coordinate">A: {{ pointA }} </p>
+                <p class="point-coordinate">B: {{ pointB}}</p>
             </div>
             <div class="current-location">
-                <!-- TODO: func: python - get current-location -->
                 <p>Current Location</p>
-                <p>-40.678901, 163.8765432</p>
+                <p>{{ currentLat }}, {{ currentLong }}</p>
             </div>
         </div>
         <!-- <div id="mapid"></div> -->
@@ -45,7 +51,6 @@
         <div class="bottom-wrap">
             <ul class="buttons">
                 <li>
-                    <!-- TODO: func: js read json, draw lines and current location -->
                     <a href="#" class="btn" id="btn-track" onclick="tracking()">Start Tracking</a>
                 </li>
                 <li>
