--- a/WebServer/app/templates/map.html
+++ b/WebServer/app/templates/map.html
@@ -3,9 +3,25 @@
 {% block content %}
 <h1>Map</h1>
 <!-- Use a button to represent a table at the moment -->
-<ul class="buttons">
+<!-- <ul class="buttons">
     <li>
-        <a href="{{ url_for('tracking') }}">Choose a map to start tracking</a>
+        <p>{{ lstMap }} {{ lstMap[0].mapName}}</p>
+        <a href="{{ url_for('tracking') }}">view</a>
     </li>
-</ul>
+</ul> -->
+
+<table class ="list">
+    <tr class ="list">
+        <th class ="list">Map</th>
+        <th class ="list">Operation</th>
+    </tr>
+    {% for m in lstMap %}
+    <tr class ="list">        
+        <td class ="list">{{ m.mapName }} </td>
+        <td class ="list">
+            <a href="{{ url_for('tracking') }}" class="btn-intable">Use</a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
