add readme file; edit map; adjust file structure;

--- a/WebServer/app/templates/map.html
+++ b/WebServer/app/templates/map.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Map</h1>
+<h1 class="title-map">Map</h1>
 <!-- Use a button to represent a table at the moment -->
 <!-- <ul class="buttons">
     <li>
@@ -12,7 +12,7 @@
 
 <table class ="list">
     <tr class ="list">
-        <th class ="list">Map</th>
+        <th class ="list">Field</th>
         <th class ="list">Operation</th>
     </tr>
     {% for m in lstMap %}
