--- a/WebServer/app/static/style.css
+++ b/WebServer/app/static/style.css
@@ -100,7 +100,11 @@
     height: 25px;
 }
 
-/* Map History */
+/* Page Map */
+.title-map {
+    padding: 1em;
+}
+
 table {
     margin-left: auto;
     margin-right: auto;
