--- a/WebServer/app/static/style.css
+++ b/WebServer/app/static/style.css
@@ -60,8 +60,14 @@
     border-radius: 50%;
 }
 
+.current-location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #map { 
-    height: 80vh; 
+    height: 84vh; 
     margin-top: 8vh;
 }
 
