--- a/WebServer/app/templates/tracking.html
+++ b/WebServer/app/templates/tracking.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="content">
     <div class="upper-wrap">
-        <div class="devices">
+        <!-- <div class="devices">
             <div class="device">
                 {% if sensor == "up" %}
                     <div class="device-status-shape" style="background-color: yellowgreen;"></div>
@@ -26,10 +26,10 @@
             
             <p class="point-coordinate">A: {{ pointA }} </p>
             <p class="point-coordinate">B: {{ pointB }}</p>
-        </div>
+        </div> -->
         <div class="current-location">
             <p>Current Location</p>
-            <p>{{ currentLat }}, {{ currentLong }}</p>
+            <p id='current-position'>{{ currPos[0] }}, {{ currPos[1] }}</p>
         </div>
     </div>
     <div id="map"></div>
@@ -51,19 +51,14 @@
                 <a href="#" class="btn" id="btn-track" onclick="tracking()">Start Tracking</a>
             </li>
             <li>
-                <a href="{{ url_for('history') }}" class="btn">History</a>
-            </li>
-            <li>
-                <a href="{{ url_for('index') }}" class="btn">Home</a>
+                <a href="{{ url_for('map') }}" class="btn">Map</a>
             </li>
         </ul>
     </div>
 </div>
 <script type="text/javascript">
     var mapName = {{ map.mapName|tojson }}
-    var currentLat = {{ currentLat|tojson }}
-    var currentLong = {{ currentLong|tojson }}
-    var mapid = {{ map.id|tojson }}
+    var currPos = {{ currPos|tojson }}
 </script>
 <script type='text/javascript' src="{{ url_for('static', filename='map.js') }}"></script>
 {% endblock %}
