Edit json file key name

--- a/WebServer/app/templates/tracking.html
+++ b/WebServer/app/templates/tracking.html
@@ -48,7 +48,7 @@
     <div class="bottom-wrap">
         <ul class="buttons">
             <li>
-                <a href="#" class="btn" id="btn-track" onclick="tracking()">Start Tracking</a>
+                <a href="#" class="btn" id="btn-track" onclick="tracking()">View live</a>
             </li>
             <li>
                 <a href="{{ url_for('map') }}" class="btn">Map</a>
