--- a/WebServer/app/templates/base.html
+++ b/WebServer/app/templates/base.html
@@ -10,12 +10,8 @@
         <title>Precision Farming</title>
     {% endif %}
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-    crossorigin=""></script>
+    <link rel="stylesheet" href="{{ url_for('static',filename='leaflet-1.7.1/leaflet.css') }}"/>
+    <script src="{{ url_for('static',filename='leaflet-1.7.1/leaflet.js') }}"></script>
     {{ JSGlue.include() }}
 </head>
 <body>
