Add remote access
Make website accessible remotely, to load the local map, need to access server machine ip instead of localhost in broswer

--- a/WebServer/app/templates/tracking.html
+++ b/WebServer/app/templates/tracking.html
@@ -24,6 +24,7 @@
     var mapName = {{ mapName|tojson }}
     var currPos = {{ currPos|tojson }}
     var measure = {{ measure|tojson }}
+    var ip = {{ ip|tojson }}
 </script>
 
 <script src="{{ url_for('static', filename='/scripts/dom-to-image.js') }}"></script>
