--- a/WebServer/app/templates/index.html
+++ b/WebServer/app/templates/index.html
@@ -1,3 +1,25 @@
+<!-- 
+* The University of Western Australia : 2021
+
+* CITS5206 Professional Computing
+
+* Group: Precision Farming
+
+
+
+* Source Code
+
+* Author: Harper Wu
+
+* Date Created: 23-09-2021
+
+* Last Modified: 13-10-2021
+
+* Version: 1.0
+
+* State : Stable 
+-->
+
 {% extends "base.html" %}
 
 {% block content %}
