Remove getIP; Add exception handle to getMapNames;

--- a/WebServer/app/static/style.css
+++ b/WebServer/app/static/style.css
@@ -148,6 +148,11 @@
     padding: 1em;
 }
 
+.warning {
+    padding: 1em;
+    color: red;
+}
+
 table {
     margin-left: auto;
     margin-right: auto; 
