--- a/WebServer/app/templates/map.html
+++ b/WebServer/app/templates/map.html
@@ -26,6 +26,9 @@
 {% block content %}
 <h1 class="title-map">Map</h1>
 
+{% if lstMap|length == 0 %}
+<p class ="warning">No avalianle maps, please place map folders "Maps" folder</p>
+{% else %}
 <table class ="list">
     <tr class ="list">
         <th class ="list">Field</th>
@@ -41,4 +44,5 @@
     </tr>
     {% endfor %}
 </table>
+{% endif %}
 {% endblock %}
