--- a/WebServer/app/templates/map.html
+++ b/WebServer/app/templates/map.html
@@ -32,14 +32,15 @@
 <table class ="list">
     <tr class ="list">
         <th class ="list">Field</th>
-        <th class ="list">Measurement</th>
+        <th class ="list">Operation</th>
     </tr>
     {% for m in lstMap %}
     <tr class ="list">        
         <td class ="list">{{ m }} </td>
         <td class ="list list-Measurement">
-            <a href="{{ url_for('tracking', mapName = m, measure = 'H1ppt') }}" class="btn-intable">H1ppt</a>
-            <a href="{{ url_for('tracking', mapName = m, measure = 'P1ppt') }}" class="btn-intable">P1ppt</a>
+            <a href="{{ url_for('tracking', mapName = m) }}" class="btn-intable">Live</a>
+            <!-- <a href="{{ url_for('heatmap', mapName = m, measure = 'H1ppt') }}" class="btn-intable">H1ppt</a>
+            <a href="{{ url_for('heatmap', mapName = m, measure = 'P1ppt') }}" class="btn-intable">P1ppt</a> -->
         </td>
     </tr>
     {% endfor %}
