--- a/Web Server/app/templates/tracking.html
+++ b/Web Server/app/templates/tracking.html
@@ -31,7 +31,7 @@
                     <a href="{{ url_for('map') }}" class="btn">Map</a>
                 </li>
                 <li>
-                    <a href="#" class= "btn" id="stop">Stop</a>
+                    <a href="#" class= "btn" id="saveImage">Stop</a>
                 </li>
             </ul>
         </div>
