Updated server code

--- a/EMI-Toolkit/app/templates/base.html
+++ b/EMI-Toolkit/app/templates/base.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='leaflet-1.7.1/leaflet.css') }}"/>
     <script src="{{ url_for('static',filename='leaflet-1.7.1/leaflet.js') }}"></script>
-    <script src="{{ url_for('static',filename='jquery/jquery-3.6.0.js') }}"></script>
+    <script src="{{ url_for('static',filename='scripts/jquery-3.6.0.js') }}"></script>
     {{ JSGlue.include() }}
 </head>
 <body>
