--- a/EMI-Toolkit/app/templates/heatmap.html
+++ b/EMI-Toolkit/app/templates/heatmap.html
@@ -52,6 +52,6 @@
 <script src="{{ url_for('static', filename='/scripts/FileSaver.js') }}"></script>
 <script type='text/javascript' src="{{ url_for('static', filename='/leaflet-1.7.1/heatmap.js') }}"></script>
 <script type='text/javascript' src="{{ url_for('static', filename='/leaflet-1.7.1/leaflet-heatmap.js') }}"></script>
-<script type='text/javascript' src="{{ url_for('static', filename='heatmap.js') }}"></script>
+<script type='text/javascript' src="{{ url_for('static', filename='/scripts/heatmap.js') }}"></script>
 
 {% endblock %}
