--- a/EMI-Toolkit/app/templates/map.html
+++ b/EMI-Toolkit/app/templates/map.html
@@ -27,7 +27,7 @@
 <h1 class="title-map">Map</h1>
 
 {% if lstMap|length == 0 %}
-<p class ="warning">No avalianle maps, please place map folders "Maps" folder</p>
+<p class ="warning">Map data missing, please place map folders "Maps" folder</p>
 {% else %}
 <table class ="list">
     <tr class ="list">
