--- a/EMI-Toolkit/app/templates/tracking.html
+++ b/EMI-Toolkit/app/templates/tracking.html
@@ -51,6 +51,6 @@
 <script src="{{ url_for('static', filename='/scripts/FileSaver.js') }}"></script>
 <script type='text/javascript' src="{{ url_for('static', filename='/leaflet-1.7.1/heatmap.js') }}"></script>
 <script type='text/javascript' src="{{ url_for('static', filename='/leaflet-1.7.1/leaflet-heatmap.js') }}"></script>
-<script type='text/javascript' src="{{ url_for('static', filename='map.js') }}"></script>
+<script type='text/javascript' src="{{ url_for('static', filename='/scripts/map.js') }}"></script>
 
 {% endblock %}
