Fix tracking page bouncing when current location update

--- a/EMI-Toolkit/app/templates/tracking.html
+++ b/EMI-Toolkit/app/templates/tracking.html
@@ -25,7 +25,7 @@
 {% block content %}
 <div class="content">
     <div class="upper-wrap">
-        <div>
+        <div class="operations">
             <ul class="buttons">
                 <li>
                     <a href="{{ url_for('map') }}" class="btn">Map</a>
