--- a/EMI-Toolkit/app/static/style.css
+++ b/EMI-Toolkit/app/static/style.css
@@ -83,10 +83,15 @@
     border-radius: 50%;
 }
 
+.operations {
+    width: 20vw;
+}
+
 .current-location {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30vw;
 }
 
 #map { 
